--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,14 @@ services:
       ME_CONFIG_MONGODB_ADMINPASSWORD: root
       ME_CONFIG_MONGODB_SERVER: mongodb
 
+  customer:
+    image: deneme
+    container_name: customer
+    restart: always
+    ports:
+      - 8080:8080
+
+
 volumes:
   data: {}
 networks:
